--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
 </head>
 <body class="bg-zinc-900 text-gray-50">
     <nav class="bg-zinc-800 flex flex-row h-16 justify-between sticky top-0">
-        <div class="flex flex-row mx-6 my-auto">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <div class="flex flex-row mx-1 md:mx-6 my-auto">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mx-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
               </svg>
             <span>
-               <img src="./img/youtube.svg" alt="YT" class="mx-2 my-auto justify-self-center w-9 h-auto">
+               <img src="./img/youtube.svg" alt="YT" class="md:mx-2 my-auto justify-self-center w-9 h-auto">
             </span>
             <span class="text-lg font-bold h-auto my-auto">YouTube</span>
         </div>
         <div class="flex flex-row h-10 my-auto">
-            <input type="text" name="search" id="Search" placeholder="Search" class="w-[512px] px-4 bg-zinc-900 border-[1px] border-zinc-600">
-            <span class="flex flex-col justify-items-center w-16 h-auto bg-zinc-600 px-3">
+            <input type="text" name="search" id="Search" placeholder="Search" class="w-[512px] hidden md:block px-4 bg-zinc-900 border-[1px] border-zinc-600">
+            <span class="flex flex-col justify-items-center w-16 h-auto md:bg-zinc-600 px-3">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mx-auto my-auto" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
                   </svg>
             </span>
         </div>
-        <div class="flex flex-row mx-6 my-auto">
+        <div class="flex flex-row md:mx-6 my-auto">
             <a href="" class="my-auto"><svg xmlns="http://www.w3.org/2000/svg" class="h-6 mx-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 10l4.553-2.276A1 1 0 0121 8.618v6.764a1 1 0 01-1.447.894L15 14M5 18h8a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v8a2 2 0 002 2z" />
               </svg></a>
@@ -41,7 +41,7 @@
         </div>
     </nav>
     <div class="flex flex-row">
-        <div id = "sidebar" class="fixed w-[216px] h-full block">
+        <div id = "sidebar" class="fixed w-[216px] h-full hidden md:block">
             <ul class="mt-1 border-b-[1px] border-b-zinc-600 py-1">
                 <li class="p-2 hover:bg-zinc-700 flex flex-row">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mx-4" viewBox="0 0 20 20" fill="currentColor">
@@ -120,11 +120,11 @@
         </div>
 
 
-    <div class="px-6 ml-[216px] w-auto">
+    <div class="px-6 md:ml-[216px] w-auto">
         <div>
             <!--Carousel-->
         </div>
-        <div class="grid grid-cols-4 gap-4">
+        <div class="grid grid-cols-1 md:grid-cols-4 md:gap-4">
             <!--Main Videos (GRID)-->
             <div class=" flex flex-col">
                 <img src="./img/hq720.jpg" class="h-auto p-2" alt="Thumbnail">
