added favicon and title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="output.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="./img/youtube.svg" type="image/x-icon">
+    <title>YouTube</title>
 </head>
 <body class="bg-zinc-900 text-gray-50">
     <nav class="bg-zinc-800 flex flex-row h-16 justify-between sticky top-0">
