added medium breakpoint for grid

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div>
             <!--Carousel-->
         </div>
-        <div class="grid grid-cols-1 md:grid-cols-4 md:gap-4">
+        <div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4 gap-4">
             <!--Main Videos (GRID)-->
             <div class=" flex flex-col">
                 <img src="./img/hq720.jpg" class="h-auto p-2" alt="Thumbnail">
